--- a/src/uistore-cli/uistore-cli.csproj
+++ b/src/uistore-cli/uistore-cli.csproj
@@ -6,6 +6,7 @@
         <RootNamespace>CloudInteractive.UniFiStore</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <LangVersion>default</LangVersion>
     </PropertyGroup>
 
     <ItemGroup>
